examples/erroneous/semantic_erroneous/stringelemassign.grc
fun main() : nothing

{
  "Hello!"[0] <- 'Y';
  writeString("Yello!\n");
}
